--- a/style.css
+++ b/style.css
@@ -8,3 +8,27 @@
 .list{
     font-family: 'Times New Roman', 'sans-serif';
 }
+
+li {
+    margin: 10px;
+    display: inline-block;
+}
+
+button{
+    padding: 3px;
+    border: 2px solid lightblue;
+}
+
+.pisah{
+    display: block;
+}
+
+img{
+    width: 300px;
+    height 200px;
+}
+
+.pisah.ayam{
+    height:200px;
+    width:auto;
+}
